- Update the form settings label to "Workflow PDF".
- Updated mPDF to v8.0.4.
- Fixed PHP notices thrown in PHP 7.4.